# value-seeker

./: .env.example  .gitignore  .pre-commit-config.yaml  CHUNKING_ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.md  TASK1_SUMMARY.md  TASK_4.1_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  environment-cuda.yml  environment.yml  example_usage.py  integration_guide.md  integration_plan.md  main.py  parent_child_rag_processor.py  pyproject.toml  requirements.txt  setup_env.sh  test_basic_model_manager.py  test_current_pdf_processing.py  test_enhanced_pdf_processing.py  test_model_manager_integration.py  verify_data_models.py  verify_implementation.py
.kiro/specs/ai-investment-analyst/: design.md  requirements.md  tasks.md
config/: config.yaml
examples/: financial_chunker_demo.py  table_extraction_demo.py  text_extraction_demo.py
parent_child_rag_results/: parent_child_report_20250812_235607.md  parent_child_report_20250812_235807.md
prompts/: README.md
src/: __init__.py
src/core/: __init__.py  config.py  device_utils.py  exceptions.py  interfaces.py  logger.py
src/prompts/: __init__.py
src/rag/: __init__.py
src/retrieval/: __init__.py
tests/: test_config.py  test_data_models.py  test_document_processing_integration.py  test_document_processor.py  test_exceptions.py  test_financial_data_processing.py  test_financial_report_chunker.py  test_interfaces.py  test_logger.py  test_model_manager.py  test_parent_child_document_processor.py  test_table_extractor.py  test_text_chunking.py
